# vc-CHIP-8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vc-CHIP-8.sln  vc-CHIP-8.vcxproj  vc-CHIP-8.vcxproj.filters
Debug/: vc143.idb
Debug/vc-CHIP-8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  vc-CHIP-8.lastbuildstate
include/: glad.h
include/glad/: glad.h
src/: glad.c  main.c  program.c  program.h  ui.c  ui.h  wm.c  wm.h
